--- a/day_2/style.css
+++ b/day_2/style.css
@@ -1,3 +1,4 @@
+	*{box-sizing: border-box;}
 body {
 	font-size: 24px;
 	margin: 0;
@@ -16,5 +17,31 @@ text-shadow: 0 2px 4px rgba(0,0,0,0.5);
 }
 .wrapper {
 background: pink url('images/background.jpg') no-repeat;
+padding: 36px;
+}
 
+.wrapper a {
+color: red;
+} 
+.wrapper > a {
+	color: purple !important;	
+}
+.PosRel {
+	position: relative;
+	top: 50px;
+	left: 250px;
+	background-color: green;
+}
+.PosAps {
+	position: absolute;
+	top: 20px;
+	left: 50px;
+	background-color: yellow;
+	border-radius: 150px;
+	width: 300px;
+	height: 300px;
+	display: block;
+	font-size: 8px;
+	padding: 30px;
+	box-sizing: border-box;
 }
